updated css file (again)

--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Fourloops</title>
+        <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
     </head>
     <body>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Fourloops</li>
-                <li>Archive</li>
-                <li>Contact</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Fourloops</a></li>
+                <li><a href="#">Archive</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
+        <section>
         <div class="what">
 
 
@@ -22,8 +24,9 @@
 
 
         </div>
-        <img src="http://hapijs.com/public/img/logo-foundersandcoders.png" alt="foundersimage" />
+        <img src="assets/founders.png" alt="foundersimage" width=25%/>
         <div class="mostrecentpost">
         </div>
+        <section>
     </body>
 </html>
