updated css and index.html

--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <section>
-        <div class="what">
+        <section id="main">
+          <section class="what">
 
+            What
 
+          </section>
 
-        What
+          <section id="img">
+            <img src="assets/founders.png" alt="foundersimage" width=25%/>
+          </section>
 
+          <section id="mostrecentpost">
 
+          </section>
 
-        </div>
-        <img src="assets/founders.png" alt="foundersimage" width=25%/>
-        <div class="mostrecentpost">
-        </div>
-        <section>
+        </section>
     </body>
 </html>
