making sure index is latest version

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section id="main">
           <section class="what">
 
-            What
+            <p>What</p>
 
           </section>
 
