--- a/fourloops/fourloops.html
+++ b/fourloops/fourloops.html
@@ -9,26 +9,30 @@
 
         <div class="row">
             <div class="col-2 profpic">
+                <div class="text"> Tom </div>
                 <a href ="">
-                    <img src="../assets/panda.jpg" alt="Tom">
+                    <img class="picleft" src="../assets/panda.jpg" alt="Tom">
                 </a>
             </div>
             <div class="col-2 profpic">
+                <div class="text"> Owen </div>
                 <a href ="">
-                    <img src="../assets/panda.jpg" alt="Tom">
+                    <img class="picright" src="../assets/panda.jpg" alt="Tom">
                 </a>
             </div>
         </div>
 
         <div class="row">
             <div class="col-2 profpic">
+                <div class="text"> Francesco </div>
                 <a href ="">
-                    <img src="../assets/panda.jpg" alt="Tom">
+                    <img class="picleft" src="../assets/panda.jpg" alt="Tom">
                 </a>
             </div>
             <div class="col-2 profpic">
+                <div class="text"> Sam </div>
                 <a href ="">
-                    <img src="../assets/panda.jpg" alt="Tom">
+                    <img class="picright" src="../assets/panda.jpg" alt="Tom">
                 </a>
             </div>
         </div>
