--- a/fourloops/fourloops.html
+++ b/fourloops/fourloops.html
@@ -9,27 +9,35 @@
 
         <div class="row">
             <div class="col-2 profpic">
-                <a href ="">
-                    <img src="../assets/panda.jpg" alt="Tom">
-                </a>
+                <div class="pic-left1">
+                    <div class="text">
+                        Tom
+                    </div>
+                </div>
             </div>
             <div class="col-2 profpic">
-                <a href ="">
-                    <img src="../assets/panda.jpg" alt="Tom">
-                </a>
+                <div class="pic-right2">
+                    <div class="text">
+                        Tom
+                    </div>
+                </div>
             </div>
         </div>
 
         <div class="row">
             <div class="col-2 profpic">
-                <a href ="">
-                    <img src="../assets/panda.jpg" alt="Tom">
-                </a>
+                <div class="pic-left3">
+                    <div class="text">
+                        Tom
+                    </div>
+                </div>
             </div>
             <div class="col-2 profpic">
-                <a href ="">
-                    <img src="../assets/panda.jpg" alt="Tom">
-                </a>
+                <div class="pic-right4">
+                    <div class="text">
+                        Tom
+                    </div>
+                </div>
             </div>
         </div>
 
