--- a/fourloops/fourloops.html
+++ b/fourloops/fourloops.html
@@ -9,35 +9,43 @@
 
         <div class="row">
             <div class="col-2 profpic">
-                <div class="pic-left1">
-                    <div class="text">
-                        Tom
+                <a href=''>
+                    <div class="pic-left1">
+                        <div class="text">
+                                <span class="names"> Tom </span>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-2 profpic">
-                <div class="pic-right2">
-                    <div class="text">
-                        Tom
+                <a href=''>
+                    <div class="pic-right2">
+                        <div class="text">
+                            <span class="names"> Owen </span>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
 
         <div class="row">
             <div class="col-2 profpic">
-                <div class="pic-left3">
-                    <div class="text">
-                        Tom
+                <a href=''>
+                    <div class="pic-left3">
+                        <div class="text">
+                            <span class="names"> Franz </span>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-2 profpic">
-                <div class="pic-right4">
-                    <div class="text">
-                        Tom
+                <a href=''>
+                    <div class="pic-right4">
+                        <div class="text">
+                            <span class="names"> Sam </span>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
 
