updated navbar, still messed up

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
         <meta charset="utf-8">
         <title>Fourloops</title>
         <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
+        <link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
     </head>
     <body>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Fourloops</a></li>
-                <li><a href="#">Archive</a></li>
-                <li><a href="#">Contact</a></li>
+                <a href="index.html"><li>HOME</li></a>
+                <a href="#"><li>FOURLOOPS</li></a>
+                <a href="#"><li>ARCHIVE</li></a>
+                <a href="#"><li>CONTACT</li></a>
             </ul>
         </nav>
         <section id="main">
