changed main text info about fourloops

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section id="main">
           <section class="what">
 
-            <p>What</p>
+            <p>Fourloops are four programmers who met in <a style="font-style: italic;" href="http://www.foundersandcoders.com/">Founders and Coders</a> who work on frelance projects together</p>
 
           </section>
 
