added background color, text to index

--- a/index.html
+++ b/index.html
@@ -26,9 +26,17 @@
             <img src="assets/founders.png" alt="foundersimage" width=25%/>
           </section>
 
-          <section id="mostrecentpost">
+          <a href="archive.html"><section id="recentpost">
+              <h2>TITLE</h2>
+              <p>MOST RECENT POST</p>
+              <p>Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.</p>
+              <p>Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.</p>
+              <p>Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.</p>
+              <p>Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.</p>
+              <p>Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.</p>
+              <p>Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.</p>
 
-          </section>
+          </section></a>
 
         </section>
     </body>
