polish index, add links, add most recent post, with css

--- a/index.html
+++ b/index.html
@@ -10,34 +10,44 @@
         <nav>
             <ul>
                 <a href="index.html"><li>HOME</li></a>
-                <a href="#"><li>FOURLOOPS</li></a>
-                <a href="#"><li>ARCHIVE</li></a>
-                <a href="#"><li>CONTACT</li></a>
+                <a href="fourloops/fourloops.html"><li>FOURLOOPS</li></a>
+                <a href="archive.html"><li>ARCHIVE</li></a>
+                <a href="contact.html"><li>CONTACT</li></a>
             </ul>
         </nav>
         <section id="main">
-          <section class="what">
+          <section id="what">
 
-            <p>Fourloops are four programmers who met in <a style="font-style: italic;" href="http://www.foundersandcoders.com/">Founders and Coders</a> who work on frelance projects together</p>
+            <p>Fourloops are 4 programmers who met in <a style="font-style: italic;" href="http://www.foundersandcoders.com/">Founders&Coders</a> and work on frelance projects together.</p>
 
           </section>
 
-          <section id="img">
-            <img src="assets/founders.png" alt="foundersimage" width=25%/>
+          <section id="img-main">
+            <img src="assets/founders.png" alt="foundersimage" width=50%/>
           </section>
 
           <a href="archive.html"><section id="recentpost">
-              <h2>TITLE</h2>
-              <p>MOST RECENT POST</p>
-              <p>Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.</p>
-              <p>Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.</p>
-              <p>Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.</p>
-              <p>Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.</p>
-              <p>Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.</p>
-              <p>Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.Some text.</p>
-
+              <div class=grid-container>
+                  <div class="row">
+                      <div class=col-1></div>
+                      <div class=col-2>
+                          <h2>BLASTING OUR WAY INTO CODING!!!</h2>
+                          <p>Our 1st week at <a style="font-style: italic;" href="http://www.foundersandcoders.com/">Founders & Coders</a>
+                              just ended and we have already built our first blog! <b>   READY... SET... DONE IN 4 DAYS!<b></p>
+                      </div>
+                      <div class=col-1></div>
+                  </div>
+              </div>
           </section></a>
-
+          <section id="gotoarchive">
+              <div class=grid-container>
+                  <div class="row">
+                      <div class=col-2></div>
+                      <div class=col-2>
+                          <a href="archive.html"><p>Check Out Our Weekly Posts!!</h2></a>
+                          </div>
+                      </div>
+                  </div>
         </section>
     </body>
 </html>
