--- a/fourloops/fourloops.html
+++ b/fourloops/fourloops.html
@@ -3,52 +3,64 @@
 <head>
     <title>FourLoops</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans'
+    rel='stylesheet' type='text/css'>
 </head>
 <body>
-    <div class="grid-container">
+    <nav>
+        <ul>
+            <a href="../index.html"><li>HOME</li></a>
+            <a href="../fourloops/fourloops.html"><li>FOURLOOPS</li></a>
+            <a href="../archive.html"><li>ARCHIVE</li></a>
+            <a href="../contact.html"><li>CONTACT</li></a>
+        </ul>
+    </nav>
+    <section id="main">
+        <div class="grid-container">
 
-        <div class="row">
-            <div class="col-2 profpic">
-                <a href=''>
-                    <div class="pic-left1">
-                        <div class="text">
-                                <span class="names"> Tom </span>
+            <div class="row">
+                <div class="col-2 profpic">
+                    <a href=''>
+                        <div class="pic-left1">
+                            <div class="text">
+                                    <span class="names"> Tom </span>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-2 profpic">
-                <a href=''>
-                    <div class="pic-right2">
-                        <div class="text">
-                            <span class="names"> Owen </span>
+                    </a>
+                </div>
+                <div class="col-2 profpic">
+                    <a href=''>
+                        <div class="pic-right2">
+                            <div class="text">
+                                <span class="names"> Owen </span>
+                            </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
             </div>
+
+            <div class="row">
+                <div class="col-2 profpic">
+                    <a href=''>
+                        <div class="pic-left3">
+                            <div class="text">
+                                <span class="names"> Franz </span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-2 profpic">
+                    <a href=''>
+                        <div class="pic-right4">
+                            <div class="text">
+                                <span class="names"> Sam </span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
         </div>
-
-        <div class="row">
-            <div class="col-2 profpic">
-                <a href=''>
-                    <div class="pic-left3">
-                        <div class="text">
-                            <span class="names"> Franz </span>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-2 profpic">
-                <a href=''>
-                    <div class="pic-right4">
-                        <div class="text">
-                            <span class="names"> Sam </span>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
-
-    </div>
+    </section>
 </body>
 </html>
