--- a/Profiles/ProfileFranz.html
+++ b/Profiles/ProfileFranz.html
@@ -6,30 +6,40 @@
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    <div class="grid-container">
-      <div class="row">
-          <div class="col-1">
+    <nav>
+        <ul>
+            <a href="../index.html"><li>HOME</li></a>
+            <a href="../fourloops/fourloops.html"><li>FOURLOOPS</li></a>
+            <a href="../archive.html"><li>ARCHIVE</li></a>
+            <a href="../contact.html"><li>CONTACT</li></a>
+        </ul>
+    </nav>
+    <section id="main">
+        <div class="grid-container">
+          <div class="row">
+              <div class="col-1">
+              </div>
+                    <div class="col-2">
+                        <img class="profImg" src="../assets/franz.jpg" alt="Francesco" width=40%>
+                    </div>
+              <div class="col-1">
+              </div>
           </div>
-                <div class="col-2">
-                    <img class="profImg" src="../assets/franz.jpg" alt="Francesco" width=40%>
-                </div>
-          <div class="col-1">
-          </div>
-      </div>
 
-      <div class="row">
-          <div class="col-1">
+          <div class="row">
+              <div class="col-1">
+              </div>
+              <div class="col-2">
+                  <p class="profText">
+                      A former Aerospace Project Manager, Francesco has always loved technology and challenges.
+                      Highly motivated to get into web development and startups, he entered Founders & Coders in January 2016.
+                      <br><br><b>Fun fact:</b> He would like to visit Anctarctica!<br><br>
+                      More information available on <a href="https://it.linkedin.com/in/francesco-moro-89504032">LinkedIn</a> and
+                      <a href="https://github.com/franzmoro">Github</a>.<br> Contact him on <a href="https://twitter.com/franzmoro88">Twitter</a>!
+                  </p>
+              </div>
+              <div class="col-1">
+              </div>
           </div>
-          <div class="col-2">
-              <p class="profText">
-                  A former Aerospace Project Manager, Francesco has always loved technology and challenges.
-                  Highly motivated to get into web development and startups, he entered Founders & Coders in January 2016.
-                  <br><br><b>Fun fact:</b> He would like to visit Anctarctica!<br><br>
-                  More information available on <a href="https://it.linkedin.com/in/francesco-moro-89504032">LinkedIn</a> and
-                  <a href="https://github.com/franzmoro">Github</a>.<br> Contact him on <a href="https://twitter.com/franzmoro88">Twitter</a>!
-              </p>
-          </div>
-          <div class="col-1">
-          </div>
-      </div>
+      </section>
 </body>
