Added links to gh-pages, not complete, just to see if everything is linking ok

--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,10 @@
     <body>
         <nav>
             <ul>
-                <a href="index.html"><li>HOME</li></a>
-                <a href="fourloops/fourloops.html"><li>FOURLOOPS</li></a>
-                <a href="archive.html"><li>ARCHIVE</li></a>
-                <a href="contact.html"><li>CONTACT</li></a>
+                <a href="http://fourloops.github.io/FourLoopsBlog/index.html"><li>HOME</li></a>
+                <a href="http://fourloops.github.io/FourLoopsBlog/fourloops/fourloops.html"><li>FOURLOOPS</li></a>
+                <a href="http://fourloops.github.io/FourLoopsBlog/archive/archive.html"><li>ARCHIVE</li></a>
+                <a href="http://fourloops.github.io/FourLoopsBlog/contact.html"><li>CONTACT</li></a>
             </ul>
         </nav>
         <section id="main">
