--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <body>
         <nav>
             <ul>
-                <a href="index.html"><li>HOME</li></a>
-                <a href="fourloops/fourloops.html"><li>FOURLOOPS</li></a>
-                <a href="archive.html"><li>ARCHIVE</li></a>
-                <a href="contact.html"><li>CONTACT</li></a>
+                <a href="http://fourloops.github.io/FourLoopsBlog/"><li>HOME</li></a>
+                <a href="http://fourloops.github.io/fourloops/fourloops.html"><li>FOURLOOPS</li></a>
+                <a href="http://fourloops.github.io/archive/archive.html"><li>ARCHIVE</li></a>
+                <a href="http://fourloops.github.io/contact.html"><li>CONTACT</li></a>
             </ul>
         </nav>
         <section id="main">
@@ -26,7 +26,7 @@
             <img src="assets/founders.png" alt="foundersimage" width=50%/>
           </section>
 
-          <a href="archive.html"><section id="recentpost">
+          <a href="http://fourloops.github.io/FourLoopsBlog/archive/archive.html"><section id="recentpost">
               <div class=grid-container>
                   <div class="row">
                       <div class=col-1></div>
@@ -44,7 +44,7 @@
                   <div class="row">
                       <div class=col-2></div>
                       <div class=col-2>
-                          <a href="archive.html"><p>Check Out Our Weekly Posts!!</h2></a>
+                          <a href="http://fourloops.github.io/FourLoopsBlog/archive/archive.html"><p>Check Out Our Weekly Posts!!</h2></a>
                           </div>
                       </div>
                   </div>
