--- a/Profiles/ProfileFranz.html
+++ b/Profiles/ProfileFranz.html
@@ -2,16 +2,16 @@
 <html>
 <head>
     <title>Franz's Profile</title>
-    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="http://fourloops.github.io/FourLoopsBlog/style.css">
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <nav>
         <ul>
-            <a href="../index.html"><li>HOME</li></a>
-            <a href="../fourloops/fourloops.html"><li>FOURLOOPS</li></a>
-            <a href="../archive.html"><li>ARCHIVE</li></a>
-            <a href="../contact.html"><li>CONTACT</li></a>
+            <a href="http://fourloops.github.io/FourLoopsBlog/index.html"><li>HOME</li></a>
+            <a href="http://fourloops.github.io/FourLoopsBlog/fourloops/fourloops.html"><li>FOURLOOPS</li></a>
+            <a href="http://fourloops.github.io/FourLoopsBlog/archive.html"><li>ARCHIVE</li></a>
+            <a href="http://fourloops.github.io/FourLoopsBlog/contact.html"><li>CONTACT</li></a>
         </ul>
     </nav>
     <section id="main">
@@ -20,7 +20,7 @@
               <div class="col-1">
               </div>
                     <div class="col-2">
-                        <img class="profImg" src="../assets/franz.jpg" alt="Francesco" width=40%>
+                        <img class="profImg" src="http://fourloops.github.io/FourLoopsBlog/assets/franz.jpg" alt="Francesco" width=40%>
                     </div>
               <div class="col-1">
               </div>
