Formatted the contact page and in particular the dropdown menu

--- a/contact.html
+++ b/contact.html
@@ -19,20 +19,20 @@
         <section id="main">
             <form>
                 <table align="center">
-                    <tr id="name" class="felement">
+                    <tr id="name" class="felement valign">
                         <td>
                             Name:
                         </td>
                         <td>
-                            <textarea placeholder="Your name" name="name" rows="2" cols="40"></textarea>
+                            <textarea placeholder="Your name" name="name" rows="1" cols="40"></textarea>
                         </td>
                     </tr>
-                    <tr id="email" class="felement">
+                    <tr id="email" class="felement valign">
                         <td>
                             Email:
                         </td>
                         <td >
-                            <textarea placeholder="Your email" name="email" rows="2" cols="40"></textarea>
+                            <textarea placeholder="Your email" name="email" rows="1" cols="40"></textarea>
                         </td>
                     </tr>
                     <tr id="reason" class="felement">
@@ -40,10 +40,10 @@
                             Reason for contacting:
                         </td>
                         <td>
-                            <select id="dropdown" name="reason" rows="2" cols="40">
-                                <option value="prototype" style="font-family: 'Comic Sans MS';">designing a prototype</option>
-                                <option value="mvp" style="font-family: 'Comic Sans';">making an mvp</option>
-                                <option value="other" style="font-family: 'Comic Sans';">other enquiries</option>
+                            <select id="dropdown" name="reason">
+                                <option value="prototype">designing a prototype</option>
+                                <option value="mvp">making an mvp</option>
+                                <option value="other">other enquiries</option>
                             </select>
                         </td>
                     </tr>
