updated nav bar links for gh-pages in archive, fourloops, index html files

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <nav>
             <ul>
                 <a href="http://fourloops.github.io/FourLoopsBlog/"><li>HOME</li></a>
-                <a href="http://fourloops.github.io/fourloops/fourloops.html"><li>FOURLOOPS</li></a>
-                <a href="http://fourloops.github.io/archive/archive.html"><li>ARCHIVE</li></a>
-                <a href="http://fourloops.github.io/contact.html"><li>CONTACT</li></a>
+                <a href="http://fourloops.github.io/FourLoopsBlog/fourloops/fourloops.html"><li>FOURLOOPS</li></a>
+                <a href="http://fourloops.github.io/FourLoopsBlog/archive/archive.html"><li>ARCHIVE</li></a>
+                <a href="http://fourloops.github.io/FourLoopsBlog/contact.html"><li>CONTACT</li></a>
             </ul>
         </nav>
         <section id="main">
