--- a/Profiles/ProfileTom.html
+++ b/Profiles/ProfileTom.html
@@ -6,6 +6,15 @@
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
+    <nav>
+        <ul>
+            <a href="index.html"><li>HOME</li></a>
+            <a href="#"><li>FOURLOOPS</li></a>
+            <a href="#"><li>ARCHIVE</li></a>
+            <a href="#"><li>CONTACT</li></a>
+        </ul>
+    </nav>
+    <section id="main">
     <div class="grid-container">
       <div class="row">
           <div class="col-1">
@@ -30,4 +39,5 @@
           <div class="col-1">
           </div>
       </div>
+  </section>
 </body>
