edited the navbar in months to have the correct links and added a link to coming soon in months

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </section>
 
           <section id="img-main">
-            <img src="assets/founders.png" alt="foundersimage" width=50%/>
+            <img src="http://fourloops.github.io/FourLoopsBlog/assets/founders.png" alt="foundersimage" width=50%/>
           </section>
 
           <a href="http://fourloops.github.io/FourLoopsBlog/archive/archive.html"><section id="recentpost">
