add profile pictures

--- a/fourloops/fourloops.html
+++ b/fourloops/fourloops.html
@@ -20,7 +20,7 @@
 
             <div class="row">
                 <div class="col-2 profpic">
-                    <a href=''>
+                    <a href='http://fourloops.github.io/FourLoopsBlog/profiles/ProfileTom.html'>
                         <div class="pic-left1">
                             <div class="textFour">
                                     <span class="names"> Tom </span>
@@ -32,7 +32,7 @@
                     <a href=''>
                         <div class="pic-right2">
                             <div class="textFour">
-                                <span class="names"> Owen </span>
+                                <span class="fournames"> Owen </span>
                             </div>
                         </div>
                     </a>
@@ -44,7 +44,7 @@
                     <a href=''>
                         <div class="pic-left3">
                             <div class="textFour">
-                                <span class="names"> Franz </span>
+                                <span class="fournames"> Franz </span>
                             </div>
                         </div>
                     </a>
