--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                             <textarea placeholder="Your name" name="name" rows="1" cols="40"></textarea>
                         </td>
                     </tr>
-                    <tr id="email" class="felement valign">
+                    <tr id="email" class="felement">
                         <td>
                             Email:
                         </td>
@@ -61,12 +61,20 @@
 
                         </td>
                         <td align="center">
-                            <button type="button" name="button">Submit</button>
+                            <input type="button" name="Submit" value="Submit" onclick="showDiv()" />
                         </td>
                     </tr>
                 </table>
             </form>
-
         </section>
+        <div id="cover">
+            <h2>Thank you for contacting us! We'll get back to you shortly.</h2>
+            <a href="http://fourloops.github.io/FourLoopsBlog/index.html">Back to Home Page</a>
+        </div>
+        <script type="text/javascript">
+            function showDiv(){
+                document.getElementById("cover").classList.add("completed");
+            }
+        </script>
     </body>
 </html>
