--- a/Profiles/ProfileOwen.html
+++ b/Profiles/ProfileOwen.html
@@ -9,10 +9,10 @@
 <body>
     <nav>
         <ul>
-            <a href="../index.html"><li>HOME</li></a>
-            <a href="../fourloops/fourloops.html"><li>FOURLOOPS</li></a>
-            <a href="../archive.html"><li>ARCHIVE</li></a>
-            <a href="../contact.html"><li>CONTACT</li></a>
+            <a href="http://fourloops.github.io/FourLoopsBlog/index.html"><li>HOME</li></a>
+            <a href="http://fourloops.github.io/FourLoopsBlog/fourloops/fourloops.html"><li>FOURLOOPS</li></a>
+            <a href="http://fourloops.github.io/FourLoopsBlog/archive.html"><li>ARCHIVE</li></a>
+            <a href="http://fourloops.github.io/FourLoopsBlog/contact.html"><li>CONTACT</li></a>
         </ul>
     </nav>
     <div class="contacts">
@@ -47,8 +47,7 @@
 
                       <br><br><b>Fun fact:</b> Wants to learn Hindi
                       <br><br>
-                      More information available on <a href="https://uk.linkedin.com/in/oturnermajor">LinkedIn</a> and
-                      <a href="https://github.com/oturnermajor">Github</a>.<br> Contact him on <a href="https://twitter.com/oturnermajor">Twitter</a>!
+                      Click the social media buttons on the right to see more!
                   </p>
               </div>
               <div class="col-1">
