--- a/Profiles/ProfileTom.html
+++ b/Profiles/ProfileTom.html
@@ -8,10 +8,10 @@
 <body>
     <nav>
         <ul>
-            <a href="index.html"><li>HOME</li></a>
-            <a href="#"><li>FOURLOOPS</li></a>
-            <a href="#"><li>ARCHIVE</li></a>
-            <a href="#"><li>CONTACT</li></a>
+            <a href="http://fourloops.github.io/FourLoopsBlog/index.html"><li>HOME</li></a>
+            <a href="http://fourloops.github.io/FourLoopsBlog/fourloops/fourloops.html"><li>FOURLOOPS</li></a>
+            <a href="http://fourloops.github.io/FourLoopsBlog/archive.html"><li>ARCHIVE</li></a>
+            <a href="http://fourloops.github.io/FourLoopsBlog/contact.html"><li>CONTACT</li></a>
         </ul>
     </nav>
     <div class="contacts">
