--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </section>
 
           <section id="img-main">
-            <img src="http://fourloops.github.io/FourLoopsBlog/assets/founders.png" alt="foundersimage" width=50%/>
+            <img id="sunset" src="http://fourloops.github.io/FourLoopsBlog/assets/bethnalgreen-skyline.jpg" alt="foundersimage" width=50%/>
           </section>
 
           <a href="http://fourloops.github.io/FourLoopsBlog/archive/archive.html"><section id="recentpost">
@@ -31,9 +31,9 @@
                   <div class="row">
                       <div class=col-1></div>
                       <div class=col-2>
-                          <h2>BLASTING OUR WAY INTO CODING!!!</h2>
-                          <p>Our 1st week at <a style="font-style: italic;" href="http://www.foundersandcoders.com/">Founders & Coders</a>
-                              just ended and we have already built our first blog! <b>   READY... SET... DONE IN 4 DAYS!<b></p>
+                          <h2>WEEK 1</h2>
+                          <p>FourLoops would like to announce themselves onto the scene with this first blog post - we are now live for all the online world to see and scrutinise! We’re coming to the end of Day 4 of 80 at <a style="font-style: italic;" href="http://www.foundersandcoders.com/">FAC7</a>, the day that we have to finish this blog by and so far, we’re looking pretty much set to finish it in the not too distant future. Sam and Francesco took charge of the homepage and contact form dealing with their first onClick() event, which they were able to give birth to in fine style despite the lack of ‘vanilla’ documentation online (looks like the web’s mostly full of lazy library-users). Meanwhile Owen and I cracked on with setting up the profile page system using a fairy standard css grid system. We found ourselves up to the neck in image manipulation to include some of the more fiddly features like thumbnails. But all that’s in the past as we code on into the sunset with only the internal link system in the GitHub’s ‘pages’ feature left to secure. Oh and we should probably style the environment of this innocent little post before we pack up too.
+Tom 21/01/16</p>
                       </div>
                       <div class=col-1></div>
                   </div>
@@ -44,7 +44,7 @@
                   <div class="row">
                       <div class=col-2></div>
                       <div class=col-2>
-                          <a href="http://fourloops.github.io/FourLoopsBlog/archive/archive.html"><p>Check Out Our Weekly Posts!!</h2></a>
+                          <a href="http://fourloops.github.io/FourLoopsBlog/archive/archive.html"><p>Check out our weekly posts...</h2></a>
                           </div>
                       </div>
                   </div>
