--- a/fourloops/fourloops.html
+++ b/fourloops/fourloops.html
@@ -29,7 +29,7 @@
                     </a>
                 </div>
                 <div class="col-2 profpic">
-                    <a href=''>
+                    <a href='http://fourloops.github.io/FourLoopsBlog/profiles/ProfileOwen.html'>
                         <div class="pic-right2">
                             <div class="textFour">
                                 <span class="fournames"> Owen </span>
@@ -41,7 +41,7 @@
 
             <div class="row">
                 <div class="col-2 profpic">
-                    <a href=''>
+                    <a href='http://fourloops.github.io/FourLoopsBlog/profiles/ProfileFranz.html'>
                         <div class="pic-left3">
                             <div class="textFour">
                                 <span class="fournames"> Franz </span>
@@ -50,7 +50,7 @@
                     </a>
                 </div>
                 <div class="col-2 profpic">
-                    <a href=''>
+                    <a href='http://fourloops.github.io/FourLoopsBlog/profiles/ProfileSam.html'>
                         <div class="pic-right4">
                             <div class="textFour">
                                 <span class="names"> Sam </span>
