nu-html files with no grid format, individual profiles with centered image

--- a/Profiles/ProfileFranz.html
+++ b/Profiles/ProfileFranz.html
@@ -23,17 +23,8 @@
         </ul>
     </div>
     <section id="main">
+        <img class="profImg" src="http://fourloops.github.io/FourLoopsBlog/assets/franz.jpg" alt="Francesco" width=40% align="center">
         <div class="grid-container">
-          <div class="row">
-              <div class="col-1">
-              </div>
-                    <div class="col-2">
-                        <img class="profImg" src="http://fourloops.github.io/FourLoopsBlog/assets/franz.jpg" alt="Francesco" width=40%>
-                    </div>
-              <div class="col-1">
-              </div>
-          </div>
-
           <div class="row">
               <div class="col-1">
               </div>
@@ -49,5 +40,6 @@
               <div class="col-1">
               </div>
           </div>
-      </section>
+      </div>
+  </section>
 </body>
