--- a/Profiles/ProfileTom.html
+++ b/Profiles/ProfileTom.html
@@ -23,37 +23,28 @@
         </ul>
     </div>
     <section id="main">
-    <div class="grid-container">
-      <div class="row">
-          <div class="col-1">
-          </div>
-                <div class="col-2">
-                    <img class="profImg" src="http://fourloops.github.io/FourLoopsBlog/assets/tom.jpg" alt="Tom">
-                </div>
-          <div class="col-1">
-          </div>
-      </div>
+        <img class="profImg" src="http://fourloops.github.io/FourLoopsBlog/assets/tom.jpg" alt="Tom" align="center">
 
-      <div class="row">
-          <div class="col-1">
-          </div>
-          <div class="col-2">
-              <p class="profText">
-                  Having spent many years at sea, Tom is an expert in navigation
-                   and pirates. The victim of a mutiny in October 2015, Tom found
-                    himself marooned on a small island in the Irish sea with only
-                     a laptop to his name. Resigning himself to making the best
-                     of a bad situation, he settled himself in a local tavern
-                     where he worked behind the bar for a bed, bread and internet
-                     time. On the blustery evening of October 11, he found himself
-                     sitting in front of the Founders and Coders website and
-                     decided to give coding a crack. Three months of head-scratching
-                     later, he was clean shaven and on a train to London to start
-                     a new life as a code warrior!
-              </p>
-          </div>
-          <div class="col-1">
-          </div>
-      </div>
-  </section>
+        <div class="grid-container">
+            <div class="row">
+                <div class="col-1"></div>
+                <div class="col-2">
+                    <p class="profText">
+                        Having spent many years at sea, Tom is an expert in navigation
+                        and pirates. The victim of a mutiny in October 2015, Tom found
+                        himself marooned on a small island in the Irish sea with only
+                        a laptop to his name. Resigning himself to making the best
+                        of a bad situation, he settled himself in a local tavern
+                        where he worked behind the bar for a bed, bread and internet
+                        time. On the blustery evening of October 11, he found himself
+                        sitting in front of the Founders and Coders website and
+                        decided to give coding a crack. Three months of head-scratching
+                        later, he was clean shaven and on a train to London to start
+                        a new life as a code warrior!
+                    </p>
+                </div>
+                <div class="col-1"></div>
+            </div>
+        </div>
+    </section>
 </body>
