--- a/Profiles/ProfileSam.html
+++ b/Profiles/ProfileSam.html
@@ -23,30 +23,23 @@
         </ul>
     </div>
     <section id="main">
-    <div class="grid-container">
-      <div class="row">
-          <div class="col-1">
-          </div>
-                <div class="col-2">
-                    <img class="profImg" src="http://fourloops.github.io/FourLoopsBlog/assets/sam.jpeg" alt="Sam" width=40%>
-                </div>
-          <div class="col-1">
-          </div>
-      </div>
+      <img class="profImg" src="http://fourloops.github.io/FourLoopsBlog/assets/sam.jpeg" alt="Sam" width=40% align="center">
 
-      <div class="row">
-          <div class="col-1">
-          </div>
-          <div class="col-2">
-              <p class="profText">
-                  After becoming a recent maths graduate, Sam has quickly immersed himself in programming and has excelled in front end web development.
-                  With the long term goal to become a web devleoper, Sam joined January 2016 Founders & Coders cohort.
-                  <br><br><b>Fun fact:</b> Sam is a keen water polo player<br><br>
-                  More information available on <a href="https://www.linkedin.com/in/sam-houston-b8282b109?trk=nav_responsive_tab_profile">LinkedIn</a> and
-                  <a href="https://github.com/shouston3">Github</a>.<br> Contact him on <a href="https://twitter.com/shouston33">Twitter</a>!
-              </p>
-          </div>
-          <div class="col-1">
+      <div class="grid-container">
+          <div class="row">
+              <div class="col-1">
+              </div>
+              <div class="col-2">
+                  <p class="profText">
+                      After becoming a recent maths graduate, Sam has quickly immersed himself in programming and has excelled in front end web development.
+                      With the long term goal to become a web devleoper, Sam joined January 2016 Founders & Coders cohort.
+                      <br><br><b>Fun fact:</b> Sam is a keen water polo player<br><br>
+                      More information available on <a href="https://www.linkedin.com/in/sam-houston-b8282b109?trk=nav_responsive_tab_profile">LinkedIn</a> and
+                      <a href="https://github.com/shouston3">Github</a>.<br> Contact him on <a href="https://twitter.com/shouston33">Twitter</a>!
+                  </p>
+              </div>
+              <div class="col-1">
+              </div>
           </div>
       </div>
   </section>
