--- a/Profiles/ProfileFranz.html
+++ b/Profiles/ProfileFranz.html
@@ -23,12 +23,9 @@
         </ul>
     </div>
     <section id="main">
+
         <img class="profImg" src="http://fourloops.github.io/FourLoopsBlog/assets/franz.jpg" alt="Francesco" width=40% align="center">
-        <div class="grid-container">
-          <div class="row">
-              <div class="col-1">
-              </div>
-              <div class="col-2">
+        <section id="recentpost">
                   <p class="profText">
                       A former Aerospace Project Manager, Francesco has always loved technology and challenges.
                       Highly motivated to get into web development and startups, he entered Founders & Coders in January 2016.
@@ -36,10 +33,6 @@
                       More information available on <a href="https://it.linkedin.com/in/francesco-moro-89504032">LinkedIn</a> and
                       <a href="https://github.com/franzmoro">Github</a>.<br> Contact him on <a href="https://twitter.com/franzmoro88">Twitter</a>!
                   </p>
-              </div>
-              <div class="col-1">
-              </div>
-          </div>
-      </div>
-  </section>
+        </section>
+    </section>
 </body>
