--- a/Profiles/ProfileOwen.html
+++ b/Profiles/ProfileOwen.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Owen's Profile</title>
-    <link rel="stylesheet" type="text/css" href="http://fourloops.github.io/FourLoopsBlog/style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans'
     rel='stylesheet' type='text/css'>
 </head>
@@ -25,25 +25,16 @@
     </div>
     <section id="main">
         <img class="profImg" src="http://fourloops.github.io/FourLoopsBlog/assets/owen.jpg" alt="Owen" width=40%>
-        <div class="grid-container">
-          <div class="row">
-              <div class="col-1">
-              </div>
-              <div class="col-2">
+        <section id="recentpost">
                   <p class="profText">
                       Owen heard about Founders and Coders through a friend and was
                       attracted by the collaborative atmosphere and inclusive ethos.
                       He loves new places and has worked in Germany, India
                       and China in the past.
-
                       <br><br><b>Fun fact:</b> Wants to learn Hindi
                       <br><br>
                       Click the social media buttons on the right to see more!
                   </p>
-              </div>
-              <div class="col-1">
-              </div>
-          </div>
-      </div>
+        </section>
   </section>
 </body>
