--- a/Profiles/ProfileOwen.html
+++ b/Profiles/ProfileOwen.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Owen's Profile</title>
-    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="/style.css">
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans'
     rel='stylesheet' type='text/css'>
 </head>
