changed links to be relative file paths not gh-pages url's

--- a/Profiles/ProfileTom.html
+++ b/Profiles/ProfileTom.html
@@ -8,10 +8,10 @@
 <body>
     <nav>
         <ul>
-            <a href="http://fourloops.github.io/FourLoopsBlog/index.html"><li>HOME</li></a>
-            <a href="http://fourloops.github.io/FourLoopsBlog/fourloops/fourloops.html"><li>FOURLOOPS</li></a>
-            <a href="http://fourloops.github.io/FourLoopsBlog/archive/archive.html"><li>ARCHIVE</li></a>
-            <a href="http://fourloops.github.io/FourLoopsBlog/contact.html"><li>CONTACT</li></a>
+            <a href="/index.html"><li>HOME</li></a>
+            <a href="/fourloops/fourloops.html"><li>FOURLOOPS</li></a>
+            <a href="/archive/archive.html"><li>ARCHIVE</li></a>
+            <a href="/contact.html"><li>CONTACT</li></a>
         </ul>
     </nav>
     <div class="contacts">
@@ -23,7 +23,7 @@
         </ul>
     </div>
     <section id="main">
-        <img class="profImg" src="http://fourloops.github.io/FourLoopsBlog/assets/tom.jpg" alt="Tom" align="center">
+        <img class="profImg" src="/assets/tom.jpg" alt="Tom" align="center">
 
         <div class="grid-container">
             <div class="row">
