--- a/Profiles/ProfileFranz.html
+++ b/Profiles/ProfileFranz.html
@@ -8,10 +8,10 @@
 <body>
     <nav>
         <ul>
-            <a href="http://fourloops.github.io/FourLoopsBlog/index.html"><li>HOME</li></a>
-            <a href="http://fourloops.github.io/FourLoopsBlog/fourloops/fourloops.html"><li>FOURLOOPS</li></a>
-            <a href="http://fourloops.github.io/FourLoopsBlog/archive/archive.html"><li>ARCHIVE</li></a>
-            <a href="http://fourloops.github.io/FourLoopsBlog/contact.html"><li>CONTACT</li></a>
+            <a href="/index.html"><li>HOME</li></a>
+            <a href="/fourloops/fourloops.html"><li>FOURLOOPS</li></a>
+            <a href="/archive/archive.html"><li>ARCHIVE</li></a>
+            <a href="/contact.html"><li>CONTACT</li></a>
         </ul>
     </nav>
     <div class="contacts">
@@ -23,7 +23,7 @@
         </ul>
     </div>
     <section id="main">
-        <img class="profImg" src="http://fourloops.github.io/FourLoopsBlog/assets/franz.jpg" alt="Francesco" width=40% align="center">
+        <img class="profImg" src="/assets/franz.jpg" alt="Francesco" width=40% align="center">
         <div class="grid-container">
           <div class="row">
               <div class="col-1">
