--- a/Profiles/ProfileSam.html
+++ b/Profiles/ProfileSam.html
@@ -2,16 +2,16 @@
 <html>
 <head>
     <title>Franz's Profile</title>
-    <link rel="stylesheet" type="text/css" href="http://fourloops.github.io/FourLoopsBlog/style.css">
+    <link rel="stylesheet" type="text/css" href="/style.css">
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <nav>
         <ul>
-            <a href="http://fourloops.github.io/FourLoopsBlog/index.html"><li>HOME</li></a>
-            <a href="http://fourloops.github.io/FourLoopsBlog/fourloops/fourloops.html"><li>FOURLOOPS</li></a>
-            <a href="http://fourloops.github.io/FourLoopsBlog/archive/archive.html"><li>ARCHIVE</li></a>
-            <a href="http://fourloops.github.io/FourLoopsBlog/contact.html"><li>CONTACT</li></a>
+            <a href="/index.html"><li>HOME</li></a>
+            <a href="/fourloops/fourloops.html"><li>FOURLOOPS</li></a>
+            <a href="/archive/archive.html"><li>ARCHIVE</li></a>
+            <a href="/contact.html"><li>CONTACT</li></a>
         </ul>
     </nav>
     <div class="contacts">
@@ -23,7 +23,7 @@
         </ul>
     </div>
     <section id="main">
-      <img class="profImg" src="http://fourloops.github.io/FourLoopsBlog/assets/sam.jpeg" alt="Sam" width=40% align="center">
+      <img class="profImg" src="/assets/sam.jpeg" alt="Sam" width=40% align="center">
 
       <div class="grid-container">
           <div class="row">
