--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,10 @@
     <body>
         <nav>
             <ul>
-                <a href="http://fourloops.github.io/FourLoopsBlog/index.html"><li>HOME</li></a>
-                <a href="http://fourloops.github.io/FourLoopsBlog/fourloops/fourloops.html"><li>FOURLOOPS</li></a>
-                <a href="http://fourloops.github.io/FourLoopsBlog/archive/archive.html"><li>ARCHIVE</li></a>
-                <a href="http://fourloops.github.io/FourLoopsBlog/contact.html"><li>CONTACT</li></a>
+                <a href="/index.html"><li>HOME</li></a>
+                <a href="/fourloops/fourloops.html"><li>FOURLOOPS</li></a>
+                <a href="/archive/archive.html"><li>ARCHIVE</li></a>
+                <a href="/contact.html"><li>CONTACT</li></a>
             </ul>
         </nav>
         <section id="main">
@@ -69,7 +69,7 @@
         </section>
         <div id="cover">
             <h2>Thank you for contacting us! We'll get back to you shortly.</h2>
-            <a href="http://fourloops.github.io/FourLoopsBlog/index.html">Back to Home Page</a>
+            <a href="/index.html">Back to Home Page</a>
         </div>
         <script type="text/javascript">
             function showDiv(){
