--- a/fourloops/fourloops.html
+++ b/fourloops/fourloops.html
@@ -9,10 +9,10 @@
 <body>
     <nav>
         <ul>
-            <a href="http://fourloops.github.io/FourLoopsBlog/"><li>HOME</li></a>
-            <a href="http://fourloops.github.io/FourLoopsBlog/fourloops/fourloops.html"><li>FOURLOOPS</li></a>
-            <a href="http://fourloops.github.io/FourLoopsBlog/archive/archive.html"><li>ARCHIVE</li></a>
-            <a href="http://fourloops.github.io/FourLoopsBlog/contact.html"><li>CONTACT</li></a>
+            <a href="/index.html"><li>HOME</li></a>
+            <a href="/fourloops/fourloops.html"><li>FOURLOOPS</li></a>
+            <a href="/archive/archive.html"><li>ARCHIVE</li></a>
+            <a href="/contact.html"><li>CONTACT</li></a>
         </ul>
     </nav>
     <section id="main">
@@ -20,7 +20,7 @@
 
             <div class="row">
                 <div class="col-2 profpic">
-                    <a href='http://fourloops.github.io/FourLoopsBlog/Profiles/ProfileTom.html'>
+                    <a href="/Profiles/ProfileTom.html">
                         <div class="pic-left1">
                             <div class="textFour">
                                     <span class="names"> Tom </span>
@@ -29,7 +29,7 @@
                     </a>
                 </div>
                 <div class="col-2 profpic">
-                    <a href='http://fourloops.github.io/FourLoopsBlog/Profiles/ProfileOwen.html'>
+                    <a href="/Profiles/ProfileOwen.html">
                         <div class="pic-right2">
                             <div class="textFour">
                                 <span class="fournames"> Owen </span>
@@ -41,7 +41,7 @@
 
             <div class="row">
                 <div class="col-2 profpic">
-                    <a href='http://fourloops.github.io/FourLoopsBlog/Profiles/ProfileFranz.html'>
+                    <a href="/Profiles/ProfileFranz.html">
                         <div class="pic-left3">
                             <div class="textFour">
                                 <span class="fournames"> Franz </span>
@@ -50,7 +50,7 @@
                     </a>
                 </div>
                 <div class="col-2 profpic">
-                    <a href='http://fourloops.github.io/FourLoopsBlog/Profiles/ProfileSam.html'>
+                    <a href="/Profiles/ProfileSam.html">
                         <div class="pic-right4">
                             <div class="textFour">
                                 <span class="names"> Sam </span>
@@ -59,7 +59,6 @@
                     </a>
                 </div>
             </div>
-
         </div>
     </section>
 </body>
