removed non-table-formatted html files updated table-formatted filenames

--- a/fourloops/fourloops.html
+++ b/fourloops/fourloops.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>FourLoops</title>
-    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="/style.css">
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans'
     rel='stylesheet' type='text/css'>
 </head>
@@ -16,10 +16,9 @@
         </ul>
     </nav>
     <section id="main">
-        <div class="grid-container">
-
-            <div class="row">
-                <div class="col-2 profpic">
+        <table align="center">
+            <tr>
+                <td>
                     <a href='http://fourloops.github.io/FourLoopsBlog/Profiles/ProfileTom.html'>
                         <div class="pic-left1">
                             <div class="textFour">
@@ -27,8 +26,8 @@
                             </div>
                         </div>
                     </a>
-                </div>
-                <div class="col-2 profpic">
+                </td>
+                <td>
                     <a href='http://fourloops.github.io/FourLoopsBlog/Profiles/ProfileOwen.html'>
                         <div class="pic-right2">
                             <div class="textFour">
@@ -36,11 +35,10 @@
                             </div>
                         </div>
                     </a>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-2 profpic">
+                </td>
+            </tr>
+            <tr>
+                <td>
                     <a href='http://fourloops.github.io/FourLoopsBlog/Profiles/ProfileFranz.html'>
                         <div class="pic-left3">
                             <div class="textFour">
@@ -48,8 +46,8 @@
                             </div>
                         </div>
                     </a>
-                </div>
-                <div class="col-2 profpic">
+                </td>
+                <td>
                     <a href='http://fourloops.github.io/FourLoopsBlog/Profiles/ProfileSam.html'>
                         <div class="pic-right4">
                             <div class="textFour">
@@ -57,10 +55,10 @@
                             </div>
                         </div>
                     </a>
-                </div>
-            </div>
+                </td>
+            </tr>
+        </table>
 
-        </div>
     </section>
 </body>
 </html>
