fix issues #67 & #69 @Joshua-Ronan-Phillips @rub1e, updated contact css and html

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
                             Name:
                         </td>
                         <td>
-                            <textarea placeholder="Your name" name="name" rows="1" cols="40"></textarea>
+                            <textarea placeholder="Your name" name="name" rows="1"></textarea>
                         </td>
                     </tr>
                     <tr id="email" class="felement">
@@ -32,7 +32,7 @@
                             Email:
                         </td>
                         <td >
-                            <textarea placeholder="Your email" name="email" rows="1" cols="40"></textarea>
+                            <input class="contact-input" type="email" placeholder="Your email" name="email" rows="1"></input>
                         </td>
                     </tr>
                     <tr id="reason" class="felement">
@@ -52,7 +52,7 @@
                             Further details:
                         </td>
                         <td>
-                            <textarea placeholder="Any additional information" name="further details" rows="8" cols="40"></textarea>
+                            <textarea placeholder="Any additional information" name="further details" rows="8"></textarea>
                         </td>
                     </tr>
                     <tr></tr>
@@ -61,7 +61,7 @@
 
                         </td>
                         <td align="center">
-                            <input type="button" name="Submit" value="Submit" onclick="showDiv()" />
+                            <input class="submit" type="button" name="Submit" value="Submit" onclick="showDiv()" />
                         </td>
                     </tr>
                 </table>
