created js file #77 @andrewMacmurray and removed inline js from html, linking to new js file

--- a/contact.html
+++ b/contact.html
@@ -71,10 +71,6 @@
             <h2>Thank you for contacting us! We'll get back to you shortly.</h2>
             <a href="/index.html">Back to Home Page</a>
         </div>
-        <script type="text/javascript">
-            function showDiv(){
-                document.getElementById("cover").classList.add("completed");
-            }
-        </script>
+        <script type="text/javascript" src="fourloopsblog.js"></script>
     </body>
 </html>
