mobile changes update

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </section>
 
           <section id="img-main">
-            <img id="sunset" src="assets/bethnalgreen-skyline.jpg" alt="foundersimage" width=50%/>
+            <img id="sunset" src="assets/bethnalgreen-skyline.jpg" alt="foundersimage"/>
           </section>
 
           <section id="recentpost">
