changed the l of four loops to a capital L

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section id="main">
           <section id="what">
 
-            <p>Fourloops are 4 programmers who met in <a style="font-style: italic;" href="http://www.foundersandcoders.com/">Founders&Coders</a> and work on freelance projects together.</p>
+            <p>FourLoops are 4 programmers who met in <a style="font-style: italic;" href="http://www.foundersandcoders.com/">Founders&Coders</a> and work on freelance projects together.</p>
 
           </section>
 
